[tool.poetry]
name = "poche"
version = "0.3.0"
description = "Simple and fast Python in-memory caching library"
readme = "README.md"
license = "GPL-3.0+"
repository = "https://github.com/etienne-napoleone/poche"
keywords = ["cache", "in-memory", "simple", "fast", "ttl"]
authors = ["etienne-napoleone <etienne.napoleone@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8-black = "^0.1.1"
coverage = "^5.0"
mypy = "^0.761.0"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
