[tool.poetry]
name = "poche"
version = "1.0.0"
description = "Simple and fast Python in-memory caching library"
readme = "README.md"
license = "GPL-3.0+"
repository = "https://github.com/etienne-napoleone/poche"
keywords = ["cache", "in-memory", "simple", "fast", "ttl"]
authors = ["etienne-napoleone <etienne.napoleone@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Utilities",
    "Typing :: Typed",
]
include = ["poche/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.800"
black = "^20.8b1"
coverage = "^5.4"
flake8 = "^3.8.4"
isort = "^5.7.0"
codecov = "^2.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
